# chemical_annotator

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.py
chemical_annotator/: chemical_annotator.py
chemical_annotator/utils/: __init__.py  misc_utils.py
input_example/: input_example.csv
